packages/parser/test/tokenizer/E0009-octal.txt
0o777a10
===== err =====
anonymous:1:1: SyntaxError: E0009 - Invalid octal integer literal
1 | 0o777a10
  | ~~~~~~~~
